--- a/Project.toml
+++ b/Project.toml
@@ -14,6 +14,7 @@ OMEinsum = "ebe7aa44-baf0-506c-a96f-8464559b3922"
 KrylovKit = "0.7"
 LinearAlgebra = "1"
 LinearOperators = "2"
+LuxorGraphPlot = "0.3"
 OMEinsum = "0.8"
 julia = "1"
 
