--- a/Project.toml
+++ b/Project.toml
@@ -12,7 +12,7 @@ OMEinsum = "ebe7aa44-baf0-506c-a96f-8464559b3922"
 Yao = "5872b779-8223-5990-8dd0-5abbb0748c8c"
 
 [compat]
-KrylovKit = "0.7"
+KrylovKit = "0.7, 0.8"
 LinearAlgebra = "1"
 LinearOperators = "2"
 LuxorGraphPlot = "0.4"
