--- a/Project.toml
+++ b/Project.toml
@@ -15,7 +15,7 @@ Yao = "5872b779-8223-5990-8dd0-5abbb0748c8c"
 KrylovKit = "0.7"
 LinearAlgebra = "1"
 LinearOperators = "2"
-LuxorGraphPlot = "0.4"
+LuxorGraphPlot = "0.4, 0.5"
 OMEinsum = "0.8"
 Yao = "0.9"
 julia = "1"
